packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/target_multiple.cbor
¢factiongcontainftarget¢dfile¡fhashes¡fsha256x@5c2d6daaf85a710605678f8e7ef0b725b33303f3234197b9dc4b46196734a4f0fdevice¡idevice_idx 9BCE8431AC106FAA3861C7E771D20E53